--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-
+    id 'com.chaquo.python'
 }
 
 android {
@@ -16,6 +16,17 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+        python{
+            pip{
+                install "baidu-aip"
+                install "chardet"
+            }
+        }
+
     }
 
     buildFeatures {
@@ -40,6 +51,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -51,4 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'androidx.databinding:databinding-runtime:4.1.0'
+    //implementation 'com.chaquo.python:gradle:14.0.0'
+
+
 }
