--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'androidx.databinding:databinding-runtime:4.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
     //implementation 'com.chaquo.python:gradle:14.0.0'
 
 
